[workspace]
members = ["examples/w01_caesarkey_demo","examples/w01_signature_demo", "examples/w02_breakVigenereQuad_demo", "examples/w02_breakVigenere_demo", "examples/w02_vigenere_demo", "examples/w03_brokenPRG_demo", "examples/w03_workingPRG_demo", "examples/w05_crcMac_demo"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2"
